# learnep

./: .gitignore  Fixing MaxVol Algorithm Condition.md  MANIFEST.in  README.md  WALKTHROUGH.md  debug_dim.py  pyproject.toml  test.xyz  test_force.py
learnep/: config.py  config_example.yaml  first_train.py  init_config.py  initialize.py  iteration.py  main.py  maxvol.py
nep_auto/: first_train.py  init_config.py
src/learnep/: __init__.py  cli.py  config.py  config_example.yaml  fps.py  mutator.py  orchestrator.py  outlier.py  scheduler.py  validator.py
src/learnep/jaxvol/: __init__.py  adaptive.py  asi.py  cli.py  core.py  qr.py  selector.py  tools.py
src/learnep/tasks/: gpumd.py  nep.py  vasp.py
