[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learnep"
version = "0.1.0"
dependencies = [
    "typer",
    "pyyaml",
    "ase",
    "tqdm",
    "numpy",
    "jax",
    "pynep",
    "scikit-learn>=1.8.0",
]

[project.scripts]
learnep = "learnep.cli:app"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv]
package = true

[tool.setuptools.package-data]
learnep = ["*.yaml"]

[tool.uv.sources]
pynep = { git = "https://github.com/bigd4/PyNEP.git" }
