[project]
name = "learnep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ase>=3.27.0",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "typer>=0.21.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
